--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build --production"
+    "build": "gulp build --production",
+    "plug": "gulp plug"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -16,7 +17,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.4",
+    "colors": "^1.3.0",
     "del": "^3.0.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cache": "^1.0.2",
@@ -29,6 +32,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-zip": "^4.1.0",
+    "js-yaml": "^3.12.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.12.0",
     "webpack-stream": "^4.0.3",
